# serenity

./: .gitignore  ChangeLog  Makefile.am  autogen.sh  configure.ac
data/ui/: Makefile.am  serenity.ui  stage.ui
doc/reference/: Makefile.am
doc/reference/serenity/: Makefile.am
serenity/: .gitignore  Makefile.am  serenity-document.c  serenity-document.h  serenity-panels.c  serenity-panels.h  serenity-paths.c  serenity-paths.h  serenity-prefs.c  serenity-prefs.h  serenity-runtime.c  serenity-runtime.h  serenity-slide-view.c  serenity-slide-view.h  serenity-version.h.in  serenity-window.c  serenity-window.h  serenity.c  serenity.h
tests/: Makefile.am
